small fix for spacing problem on terms box in ie6

--- a/html/customer/css/default.css
+++ b/html/customer/css/default.css
@@ -452,7 +452,7 @@ div.reflex-popup {
 }
 
 div.reflex-popup table.reflex {
-	width: 98%;
+	width: 395px;
 	margin-left: 1%;
 	margin-right: 1%;
 	margin-top: 0.5em;
